Fix green buttons having blue color bleed in

--- a/theme/static/css/lucidbox.css
+++ b/theme/static/css/lucidbox.css
@@ -225,7 +225,7 @@ h1 {
   font-family: var(--primary-font);
   font-size: 1em;
   /* background-color: var(--accent); */
-  background-size: 100% 200%;
+  background-size: 100% 210%;
   background-image: linear-gradient(
     180deg,
     var(--accent) 50%,
@@ -839,15 +839,14 @@ footer textarea {
     grid-row: 2;
     padding-left: 2em;
     padding-right: 2em;
+    width: 100%;
+    text-align: center;
   }
 
   .landing-artboard .lucid-button {
     grid-column: 1;
     grid-row: 3;
     text-align: center;
-    /* Hide the background image on mobile, because it might not be pixel-perfect, and isn't used */
-    background-color: var(--accent);
-    background-image: none;
   }
 
   .arrow-container {
